Refactor canvas settings listbox styling

--- a/src/Tessera.App/App.axaml
+++ b/src/Tessera.App/App.axaml
@@ -9,6 +9,7 @@
     <Application.Styles>
         <FluentTheme />
         <StyleInclude Source="Styles/ButtonStyles.axaml" />
+        <StyleInclude Source="Styles/ListBoxStyles.axaml" />
         <StyleInclude Source="avares://Avalonia.Controls.ColorPicker/Themes/Fluent/Fluent.xaml" />
     </Application.Styles>
     <Application.Resources>
