--- a/src/Tessera.App/Views/DrawingPageView.axaml
+++ b/src/Tessera.App/Views/DrawingPageView.axaml
@@ -32,10 +32,10 @@
             <Setter Property="Padding" Value="0,5" />
             <Setter Property="HorizontalAlignment" Value="Stretch" />
         </Style>
-        <Style Selector="Button.FunctionBtn:pointerover /template/ ContentPresenter">
+        <Style Selector="Button:pointerover /template/ ContentPresenter">
             <Setter Property="Background" Value="{DynamicResource PrimaryHoverBackground}"/>
         </Style>
-        <Style Selector="Button.FunctionBtn:pointerover /template/ ContentPresenter">
+        <Style Selector="Button:pointerover /template/ ContentPresenter">
             <Setter Property="Background" Value="{DynamicResource PrimaryActiveBackground}"/>
         </Style>
         <Style Selector="Border.ToolbarBorder">
@@ -43,7 +43,6 @@
             <Setter Property="BorderBrush" Value="#E5E7EB" />
             <Setter Property="BorderThickness" Value="1" />
             <Setter Property="CornerRadius" Value="5" />
-            <Setter Property="Width" Value="36" />
             <Setter Property="BoxShadow" Value="0 1 3 0 #10000000" />
         </Style>
         <Style Selector="TextBox.TbTransparent:pointerover /template/ Border#PART_BorderElement">
@@ -85,13 +84,12 @@
     </UserControl.Styles>
     <Grid 
         Background="#f9f9f9" 
-        ColumnDefinitions="*,Auto">
+        ColumnDefinitions="*,Auto"
+        RowDefinitions="*,Auto">
         <Grid
             Grid.ColumnSpan="2"
+            Grid.RowSpan="2"
             ClipToBounds="True">
-            <TextBlock Text="{Binding Transform.Scale, StringFormat={}{0:P0}}" />
-            <TextBlock Text="{Binding Transform.OffsetX}" Margin="0,15,0,0" />
-            <TextBlock Text="{Binding Transform.OffsetY}" Margin="0,30,0,0"  />
             <Panel Name="CanvasContainer"
                    Background="Transparent"
                    PointerPressed="OnPointerPressed"
@@ -232,6 +230,8 @@
         </Grid>
         <StackPanel 
             Grid.Column="1"
+            Grid.Row="0"
+            Grid.RowSpan="2"
             Margin="15,0"
             VerticalAlignment="Center"
             Spacing="10"
@@ -248,7 +248,7 @@
                 </c:CanvasToolSettings.IsVisible>
             </c:CanvasToolSettings>
             <StackPanel Spacing="10">
-                <Border Classes="ToolbarBorder">
+                <Border Classes="ToolbarBorder" Width="36">
                     <ListBox 
                         Classes="ToolbarListBox"
                         ItemsSource="{Binding Tools}" 
@@ -273,5 +273,44 @@
                 </Border>
             </StackPanel>
         </StackPanel>
+        <Border Grid.Column="0"
+                Grid.Row="1" Classes="ToolbarBorder" Margin="15"
+                HorizontalAlignment="Left">
+            <StackPanel Orientation="Horizontal">
+                <Button
+                        ToolTip.Tip="Zoom in"
+                        Padding="5"
+                        Margin="3"
+                        CornerRadius="5"
+                        Background="Transparent"
+                        Command="{Binding ZoomInCommand}"
+                       >
+                    <Svg Path="/Assets/Icons/plus.svg" Width="16"/>
+                </Button>
+                <Button
+                        ToolTip.Tip="Zoom out"
+                        Padding="5"
+                        Margin="3"
+                        Background="Transparent"
+                        Command="{Binding ZoomOutCommand}">
+                    <Svg Path="/Assets/Icons/minus.svg" Width="16"/>
+                </Button>
+                <Border 
+                    BorderBrush="#E5E7EB" 
+                    BorderThickness="1,0,0,0" 
+                    VerticalAlignment="Center" 
+                    Padding="0, 12"
+                    Margin="3"/>
+                <Button
+                    Padding="5"
+                    Margin="3"
+                    Background="Transparent"
+                    Command="{Binding ResetZoomCommand}">
+                    <TextBlock 
+                        Text="{Binding Transform.Scale, StringFormat={}{0:P0}}"
+                        FontSize="14"/>
+                </Button>
+            </StackPanel>
+        </Border>
     </Grid>
 </UserControl>
