--- a/src/Tessera.App/Views/DrawingPageView.axaml
+++ b/src/Tessera.App/Views/DrawingPageView.axaml
@@ -97,46 +97,46 @@
                    PointerReleased="OnPointerReleased"
                    PointerWheelChanged="OnPointerWheelChanged"
                    Cursor="{Binding CurrentCursor}">
-                <Canvas IsHitTestVisible="False" RenderTransformOrigin="0,0"> 
-                    <Rectangle Canvas.Left="{Binding EraserRect.X}"
-                               Canvas.Top="{Binding EraserRect.Y}"
-                               Width="{Binding EraserRect.Width}"
-                               Height="{Binding EraserRect.Height}"
-                               IsVisible="{Binding EraserRect.IsVisible}"
-                               Stroke="{Binding EraserRect.StrokeColor}" 
-                               StrokeThickness="{Binding EraserRect.StrokeThickness}" 
-                               Fill="{Binding EraserRect.Color}"/>
-                    <Canvas.RenderTransform>
-                        <TransformGroup>
-                            <ScaleTransform 
-                                ScaleX="{Binding Transform.Scale}"
-                                ScaleY="{Binding Transform.Scale}"/>
-                            <TranslateTransform 
-                                X="{Binding Transform.OffsetX}"
-                                Y="{Binding Transform.OffsetY}" />
-                        </TransformGroup>
-                    </Canvas.RenderTransform>
-                </Canvas>
-                <c:CanvasGrid 
-                    RenderTransformOrigin="0,0"
-                    IsHitTestVisible="False"
-                    OffsetX="{Binding Transform.OffsetX}"
-                    OffsetY="{Binding Transform.OffsetY}"
-                    Scale="{Binding Transform.Scale}"
-                    GridSpacing="{Binding GridSpacing}"
-                    GridType="{Binding GridType}"
-                    GridColor="{Binding GridColor}" >
-                    <c:CanvasGrid.RenderTransform>
-                        <TransformGroup>
-                            <ScaleTransform 
-                                ScaleX="{Binding Transform.Scale}"
-                                ScaleY="{Binding Transform.Scale}"/>
-                            <TranslateTransform 
-                                X="{Binding Transform.OffsetX}"
-                                Y="{Binding Transform.OffsetY}" />
-                        </TransformGroup>
-                    </c:CanvasGrid.RenderTransform>
-                </c:CanvasGrid>
+                <!-- <Canvas IsHitTestVisible="False" RenderTransformOrigin="0,0">  -->
+                <!--     <Rectangle Canvas.Left="{Binding EraserRect.X}" -->
+                <!--                Canvas.Top="{Binding EraserRect.Y}" -->
+                <!--                Width="{Binding EraserRect.Width}" -->
+                <!--                Height="{Binding EraserRect.Height}" -->
+                <!--                IsVisible="{Binding EraserRect.IsVisible}" -->
+                <!--                Stroke="{Binding EraserRect.StrokeColor}"  -->
+                <!--                StrokeThickness="{Binding EraserRect.StrokeThickness}"  -->
+                <!--                Fill="{Binding EraserRect.Color}"/> -->
+                <!--     <Canvas.RenderTransform> -->
+                <!--         <TransformGroup> -->
+                <!--             <ScaleTransform  -->
+                <!--                 ScaleX="{Binding Transform.Scale}" -->
+                <!--                 ScaleY="{Binding Transform.Scale}"/> -->
+                <!--             <TranslateTransform  -->
+                <!--                 X="{Binding Transform.OffsetX}" -->
+                <!--                 Y="{Binding Transform.OffsetY}" /> -->
+                <!--         </TransformGroup> -->
+                <!--     </Canvas.RenderTransform> -->
+                <!-- </Canvas> -->
+                <!-- <c:CanvasGrid  -->
+                <!--     RenderTransformOrigin="0,0" -->
+                <!--     IsHitTestVisible="False" -->
+                <!--     OffsetX="{Binding Transform.OffsetX}" -->
+                <!--     OffsetY="{Binding Transform.OffsetY}" -->
+                <!--     Scale="{Binding Transform.Scale}" -->
+                <!--     GridSpacing="{Binding GridSpacing}" -->
+                <!--     GridType="{Binding GridType}" -->
+                <!--     GridColor="{Binding GridColor}" > -->
+                <!--     <c:CanvasGrid.RenderTransform> -->
+                <!--         <TransformGroup> -->
+                <!--             <ScaleTransform  -->
+                <!--                 ScaleX="{Binding Transform.Scale}" -->
+                <!--                 ScaleY="{Binding Transform.Scale}"/> -->
+                <!--             <TranslateTransform  -->
+                <!--                 X="{Binding Transform.OffsetX}" -->
+                <!--                 Y="{Binding Transform.OffsetY}" /> -->
+                <!--         </TransformGroup> -->
+                <!--     </c:CanvasGrid.RenderTransform> -->
+                <!-- </c:CanvasGrid> -->
                 <ItemsControl ItemsSource="{Binding Shapes}" IsHitTestVisible="False"  Padding="0" 
                               Margin="0" 
                               BorderThickness="0" >
@@ -150,14 +150,7 @@
                         <ItemsPanelTemplate>
                             <Canvas x:Name="Canvas" RenderTransformOrigin="0,0">
                                 <Canvas.RenderTransform>
-                                    <TransformGroup>
-                                        <ScaleTransform 
-                                            ScaleX="{Binding Transform.Scale}"
-                                            ScaleY="{Binding Transform.Scale}"/>
-                                        <TranslateTransform 
-                                            X="{Binding Transform.OffsetX}"
-                                            Y="{Binding Transform.OffsetY}" />
-                                    </TransformGroup>
+                                  <MatrixTransform Matrix="{Binding Transform.Matrix}" />
                                 </Canvas.RenderTransform>
                             </Canvas>
                         </ItemsPanelTemplate>
@@ -308,7 +301,7 @@
                     Background="Transparent"
                     Command="{Binding ResetZoomCommand}">
                     <TextBlock 
-                        Text="{Binding Transform.Scale, StringFormat={}{0:P0}}"
+                        Text="{Binding Transform.Matrix.M22, StringFormat={}{0:P0}}"
                         FontSize="14"/>
                 </Button>
             </StackPanel>
