--- a/src/Tessera.App/Views/DrawingPageView.axaml
+++ b/src/Tessera.App/Views/DrawingPageView.axaml
@@ -97,46 +97,30 @@
                    PointerReleased="OnPointerReleased"
                    PointerWheelChanged="OnPointerWheelChanged"
                    Cursor="{Binding CurrentCursor}">
-                <!-- <Canvas IsHitTestVisible="False" RenderTransformOrigin="0,0">  -->
-                <!--     <Rectangle Canvas.Left="{Binding EraserRect.X}" -->
-                <!--                Canvas.Top="{Binding EraserRect.Y}" -->
-                <!--                Width="{Binding EraserRect.Width}" -->
-                <!--                Height="{Binding EraserRect.Height}" -->
-                <!--                IsVisible="{Binding EraserRect.IsVisible}" -->
-                <!--                Stroke="{Binding EraserRect.StrokeColor}"  -->
-                <!--                StrokeThickness="{Binding EraserRect.StrokeThickness}"  -->
-                <!--                Fill="{Binding EraserRect.Color}"/> -->
-                <!--     <Canvas.RenderTransform> -->
-                <!--         <TransformGroup> -->
-                <!--             <ScaleTransform  -->
-                <!--                 ScaleX="{Binding Transform.Scale}" -->
-                <!--                 ScaleY="{Binding Transform.Scale}"/> -->
-                <!--             <TranslateTransform  -->
-                <!--                 X="{Binding Transform.OffsetX}" -->
-                <!--                 Y="{Binding Transform.OffsetY}" /> -->
-                <!--         </TransformGroup> -->
-                <!--     </Canvas.RenderTransform> -->
-                <!-- </Canvas> -->
-                <!-- <c:CanvasGrid  -->
-                <!--     RenderTransformOrigin="0,0" -->
-                <!--     IsHitTestVisible="False" -->
-                <!--     OffsetX="{Binding Transform.OffsetX}" -->
-                <!--     OffsetY="{Binding Transform.OffsetY}" -->
-                <!--     Scale="{Binding Transform.Scale}" -->
-                <!--     GridSpacing="{Binding GridSpacing}" -->
-                <!--     GridType="{Binding GridType}" -->
-                <!--     GridColor="{Binding GridColor}" > -->
-                <!--     <c:CanvasGrid.RenderTransform> -->
-                <!--         <TransformGroup> -->
-                <!--             <ScaleTransform  -->
-                <!--                 ScaleX="{Binding Transform.Scale}" -->
-                <!--                 ScaleY="{Binding Transform.Scale}"/> -->
-                <!--             <TranslateTransform  -->
-                <!--                 X="{Binding Transform.OffsetX}" -->
-                <!--                 Y="{Binding Transform.OffsetY}" /> -->
-                <!--         </TransformGroup> -->
-                <!--     </c:CanvasGrid.RenderTransform> -->
-                <!-- </c:CanvasGrid> -->
+                <Canvas IsHitTestVisible="False" RenderTransformOrigin="0,0">
+                    <Rectangle Canvas.Left="{Binding EraserRect.X}"
+                               Canvas.Top="{Binding EraserRect.Y}"
+                               Width="{Binding EraserRect.Width}"
+                               Height="{Binding EraserRect.Height}"
+                               IsVisible="{Binding EraserRect.IsVisible}"
+                               Stroke="{Binding EraserRect.StrokeColor}"
+                               StrokeThickness="{Binding EraserRect.StrokeThickness}"
+                               Fill="{Binding EraserRect.Color}"/>
+                    <Canvas.RenderTransform>
+                        <MatrixTransform Matrix="{Binding Transform.Matrix}" />
+                    </Canvas.RenderTransform>
+                </Canvas>
+                <c:CanvasGrid
+                    RenderTransformOrigin="0,0"
+                    IsHitTestVisible="False"
+                    Matrix="{Binding Transform.Matrix}"
+                    GridSpacing="{Binding GridSpacing}"
+                    GridType="{Binding GridType}"
+                    GridColor="{Binding GridColor}" >
+                    <c:CanvasGrid.RenderTransform>
+                        <MatrixTransform Matrix="{Binding Transform.Matrix}" />
+                    </c:CanvasGrid.RenderTransform>
+                </c:CanvasGrid>
                 <ItemsControl ItemsSource="{Binding Shapes}" IsHitTestVisible="False"  Padding="0" 
                               Margin="0" 
                               BorderThickness="0" >
@@ -150,7 +134,7 @@
                         <ItemsPanelTemplate>
                             <Canvas x:Name="Canvas" RenderTransformOrigin="0,0">
                                 <Canvas.RenderTransform>
-                                  <MatrixTransform Matrix="{Binding Transform.Matrix}" />
+                                    <MatrixTransform Matrix="{Binding Transform.Matrix}" />
                                 </Canvas.RenderTransform>
                             </Canvas>
                         </ItemsPanelTemplate>
@@ -272,21 +256,21 @@
                 HorizontalAlignment="Left">
             <StackPanel Orientation="Horizontal">
                 <Button
-                        ToolTip.Tip="Zoom in"
-                        Padding="5"
-                        Margin="3"
-                        CornerRadius="5"
-                        Background="Transparent"
-                        Command="{Binding ZoomInCommand}"
-                       >
+                    ToolTip.Tip="Zoom in"
+                    Padding="5"
+                    Margin="3"
+                    CornerRadius="5"
+                    Background="Transparent"
+                    Command="{Binding ZoomInCommand}"
+                >
                     <Svg Path="/Assets/Icons/plus.svg" Width="16"/>
                 </Button>
                 <Button
-                        ToolTip.Tip="Zoom out"
-                        Padding="5"
-                        Margin="3"
-                        Background="Transparent"
-                        Command="{Binding ZoomOutCommand}">
+                    ToolTip.Tip="Zoom out"
+                    Padding="5"
+                    Margin="3"
+                    Background="Transparent"
+                    Command="{Binding ZoomOutCommand}">
                     <Svg Path="/Assets/Icons/minus.svg" Width="16"/>
                 </Button>
                 <Border 
